--- a/plae/sass/style.sass
+++ b/plae/sass/style.sass
@@ -68,7 +68,6 @@ header
 	-ms-flex-align: center
 	-webkit-align-items: center
 	align-items: center
-	color: #fff
 
 .slide1, .slide2, .slide3, .slide4, .slide5, .slide6
 	background-image: url(../img/Blue_Stool-blur.jpg)
@@ -298,6 +297,7 @@ input
 		font-family: 'Nunito-Light'
 		font-weight: 600
 		font-size: 24px
+		color: #000
 .swiper-pagination
 	font-family: $default-text
 
